# tokenizer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tokenizer/: __init__.py  cli.py
tests/: test_cli.py
